ChangeLog 5Sep_3:03
1. TableView structure for home Feed created
2. Codeable Protocol for JSON data from URL JSON Respond 
3. most of the view are now taged and new enum for tag used 

ChangeLog 5Sep_3:20
1. Kingfisher cocopod installed

ChangeLog 5Sep_4:51PM
1. Like Button, Fav button are now dynamically chnage base on server data
2. Image Cover are now, out of stackView and are full width. 
3. CustomCellView are now implemented, so no need for tag view. 