@@ -17,7 +17,6 @@
 		6C828687213FC121002E03A7 /* NetworkController.swift in Sources */ = {isa = PBXBuildFile; fileRef = 6C828686213FC121002E03A7 /* NetworkController.swift */; };
 		6C82868A213FC1EA002E03A7 /* ApiURL.swift in Sources */ = {isa = PBXBuildFile; fileRef = 6C828689213FC1EA002E03A7 /* ApiURL.swift */; };
 		6C82868C213FC29A002E03A7 /* HomeFeed.swift in Sources */ = {isa = PBXBuildFile; fileRef = 6C82868B213FC29A002E03A7 /* HomeFeed.swift */; };
-		6C82868E213FD55E002E03A7 /* TagForView.swift in Sources */ = {isa = PBXBuildFile; fileRef = 6C82868D213FD55E002E03A7 /* TagForView.swift */; };
 		6CDC7DA3213FDE3300AB781B /* HomeFeedTableViewCell.swift in Sources */ = {isa = PBXBuildFile; fileRef = 6CDC7DA2213FDE3300AB781B /* HomeFeedTableViewCell.swift */; };
 /* End PBXBuildFile section */
 
@@ -34,7 +33,6 @@
 		6C828686213FC121002E03A7 /* NetworkController.swift */ = {isa = PBXFileReference; lastKnownFileType = sourcecode.swift; path = NetworkController.swift; sourceTree = "<group>"; };
 		6C828689213FC1EA002E03A7 /* ApiURL.swift */ = {isa = PBXFileReference; lastKnownFileType = sourcecode.swift; path = ApiURL.swift; sourceTree = "<group>"; };
 		6C82868B213FC29A002E03A7 /* HomeFeed.swift */ = {isa = PBXFileReference; lastKnownFileType = sourcecode.swift; path = HomeFeed.swift; sourceTree = "<group>"; };
-		6C82868D213FD55E002E03A7 /* TagForView.swift */ = {isa = PBXFileReference; lastKnownFileType = sourcecode.swift; path = TagForView.swift; sourceTree = "<group>"; };
 		6CDC7DA2213FDE3300AB781B /* HomeFeedTableViewCell.swift */ = {isa = PBXFileReference; lastKnownFileType = sourcecode.swift; path = HomeFeedTableViewCell.swift; sourceTree = "<group>"; };
 		70FAC0588B9458FE31937584 /* Pods-NewsFlyp.debug.xcconfig */ = {isa = PBXFileReference; includeInIndex = 1; lastKnownFileType = text.xcconfig; name = "Pods-NewsFlyp.debug.xcconfig"; path = "Pods/Target Support Files/Pods-NewsFlyp/Pods-NewsFlyp.debug.xcconfig"; sourceTree = "<group>"; };
 		8AD779BF1E20E4BE3594452F /* Pods-NewsFlyp.release.xcconfig */ = {isa = PBXFileReference; includeInIndex = 1; lastKnownFileType = text.xcconfig; name = "Pods-NewsFlyp.release.xcconfig"; path = "Pods/Target Support Files/Pods-NewsFlyp/Pods-NewsFlyp.release.xcconfig"; sourceTree = "<group>"; };
@@ -109,7 +107,6 @@
 			children = (
 				6C828689213FC1EA002E03A7 /* ApiURL.swift */,
 				6C82868B213FC29A002E03A7 /* HomeFeed.swift */,
-				6C82868D213FD55E002E03A7 /* TagForView.swift */,
 			);
 			path = Model;
 			sourceTree = "<group>";
@@ -252,7 +249,6 @@
 			files = (
 				6C82868C213FC29A002E03A7 /* HomeFeed.swift in Sources */,
 				6C82868A213FC1EA002E03A7 /* ApiURL.swift in Sources */,
-				6C82868E213FD55E002E03A7 /* TagForView.swift in Sources */,
 				6C828687213FC121002E03A7 /* NetworkController.swift in Sources */,
 				6C828684213FA47F002E03A7 /* HomeTableViewController.swift in Sources */,
 				6C828675213FA08E002E03A7 /* NewsFlyp.xcdatamodeld in Sources */,
