@@ -1,19 +1,0 @@
-//
-//  TagForView.swift
-//  NewsFlyp
-//
-//  Created by Lohen Yumnam on 05/09/18.
-//  Copyright © 2018 Lohen Yumnam. All rights reserved.
-//
-
-import Foundation
-
-enum TagForView: Int {
-    case titleLabel = 100
-    case description = 101
-    case source = 102
-    case category = 103
-    case created_on = 104
-    case likes = 105
-    case image = 106
-}
