@@ -16,26 +16,25 @@ class HomeTableViewController: UITableViewController {
 
     override func viewDidLoad() {
         super.viewDidLoad()
+        getHomeFeedData()
 
-        // Uncomment the following line to preserve selection between presentations
-        // self.clearsSelectionOnViewWillAppear = false
-
-        // Uncomment the following line to display an Edit button in the navigation bar for this view controller.
-        // self.navigationItem.rightBarButtonItem = self.editButtonItem
-        
-        NetworkController.shared.fetchHomeFeed { (feed) in
-            self.newsFeed = feed
-            
-            
-            DispatchQueue.main.async {
-                self.tableView.reloadData()
-            }
-        }
     }
 
     override func didReceiveMemoryWarning() {
         super.didReceiveMemoryWarning()
         // Dispose of any resources that can be recreated.
+    }
+    
+    func getHomeFeedData() {
+                NetworkController.shared.fetchHomeFeed { (feed) in
+                    self.newsFeed = feed
+        
+        
+                    DispatchQueue.main.async {
+                        self.tableView.reloadData()
+                    }
+                }
+
     }
 
     // MARK: - Table view data source
@@ -46,8 +45,6 @@ class HomeTableViewController: UITableViewController {
 //    }
 
     override func tableView(_ tableView: UITableView, numberOfRowsInSection section: Int) -> Int {
-        // #warning Incomplete implementation, return the number of rows
-        print(newsFeed?.count)
         guard let feeds = newsFeed else {return 0}
         return feeds.count
     }
@@ -55,33 +52,11 @@ class HomeTableViewController: UITableViewController {
     
     override func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
         let cell = tableView.dequeueReusableCell(withIdentifier: "newCell", for: indexPath) as! HomeFeedTableViewCell
-        
-
-//        let titleLabel = cell.viewWithTag(TagForView.titleLabel.rawValue) as? UILabel
-//        let descriptionLabel =  cell.viewWithTag(TagForView.description.rawValue) as? UILabel
-//        let sourceLabel = cell.viewWithTag(TagForView.source.rawValue) as? UILabel
-//        let categoryLabel = cell.viewWithTag(TagForView.category.rawValue) as? UILabel
-//        let created_onLabel = cell.viewWithTag(TagForView.created_on.rawValue) as? UILabel
-//        let likes = cell.viewWithTag(TagForView.likes.rawValue) as? UILabel
-//        var coverImage = cell.viewWithTag(TagForView.image.rawValue) as? UIImage
-//
-        
-        
+  
         if let feed = newsFeed {
-//            titleLabel?.text = feed[indexPath.row].title
-//            descriptionLabel?.text = feed[indexPath.row].description
-//            sourceLabel?.text = feed[indexPath.row].source
-//            categoryLabel?.text = feed[indexPath.row].category
-//            created_onLabel?.text = feed[indexPath.row].createdOn
-//            likes?.text = feed[indexPath.row].likes
             cell.updateCellUI(feed: feed[indexPath.row])
-            
-            
-            
         }
-        
-
-        return cell
+       return cell
     }
  
 
@@ -129,5 +104,18 @@ class HomeTableViewController: UITableViewController {
         // Pass the selected object to the new view controller.
     }
     */
-
+    
+    // MARK:- Pull to refresh
+    @IBAction func pullToRefresh(_ sender: UIRefreshControl) {
+        NetworkController.shared.fetchHomeFeed { (feed) in
+            self.newsFeed = feed
+            
+            
+            DispatchQueue.main.async {
+                self.tableView.reloadData()
+                sender.endRefreshing()
+            }
+        }
+    }
+    
 }
